Hbar_Propagation/compile
In file included from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Atomic_Array_Evolution_Handler.h:70:0,
                 from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics.h:4,
                 from src/CW_1S2S_Arr_gen.cpp:4:
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Template_Impl/Atomic_Array_Evolution_Handler.hpp: In instantiation of ‘void aae_hand_nms::atomic_array_evolution_handler<Illum_T, Decay_T, SSAH_T>::do_steps_in_beam(KH_T&) [with ig_nms::interp_quant IQ = (ig_nms::interp_quant)4003; KH_T = kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >; Illum_T = ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; Decay_T = decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; SSAH_T = st_sum_arr_hand_nms::st_sum_arr_hand]’:
src/CW_1S2S_Arr_gen.cpp:46:5:   required from ‘void in_beam_func(kh_t&, aaeh_t&) [with ig_nms::interp_quant IQ = (ig_nms::interp_quant)4003; kh_t = kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >; aaeh_t = aae_hand_nms::atomic_array_evolution_handler<ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, st_sum_arr_hand_nms::st_sum_arr_hand>]’
src/CW_1S2S_Arr_gen.cpp:36:19:   required from ‘void run_reg(kh_t&, aaeh_t&) [with ig_nms::interp_quant IQ = (ig_nms::interp_quant)4003; kh_t = kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >; aaeh_t = aae_hand_nms::atomic_array_evolution_handler<ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, st_sum_arr_hand_nms::st_sum_arr_hand>]’
src/CW_1S2S_Arr_gen.cpp:74:25:   required from here
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Template_Impl/Atomic_Array_Evolution_Handler.hpp:48:21: error: no matching function for call to ‘aae_hand_nms::atomic_array_evolution_handler<ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, st_sum_arr_hand_nms::st_sum_arr_hand>::build_params_arr(kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >&)’
     build_params_arr(kh);
     ~~~~~~~~~~~~~~~~^~~~
In file included from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics.h:4:0,
                 from src/CW_1S2S_Arr_gen.cpp:4:
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Atomic_Array_Evolution_Handler.h:66:14: note: candidate: template<ig_nms::interp_quant IQ, class KH_T> void aae_hand_nms::atomic_array_evolution_handler<Illum_T, Decay_T, SSAH_T>::build_params_arr(KH_T&) [with ig_nms::interp_quant IQ = IQ; KH_T = KH_T; Illum_T = ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; Decay_T = decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; SSAH_T = st_sum_arr_hand_nms::st_sum_arr_hand]
         void build_params_arr(KH_T&);
              ^~~~~~~~~~~~~~~~
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Atomic_Array_Evolution_Handler.h:66:14: note:   template argument deduction/substitution failed:
In file included from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Atomic_Array_Evolution_Handler.h:70:0,
                 from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics.h:4,
                 from src/CW_1S2S_Arr_gen.cpp:4:
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Template_Impl/Atomic_Array_Evolution_Handler.hpp:48:21: note:   couldn't deduce template parameter ‘IQ’
     build_params_arr(kh);
     ~~~~~~~~~~~~~~~~^~~~
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Template_Impl/Atomic_Array_Evolution_Handler.hpp: In instantiation of ‘void aae_hand_nms::atomic_array_evolution_handler<Illum_T, Decay_T, SSAH_T>::do_steps_in_beam(KH_T&) [with ig_nms::interp_quant IQ = (ig_nms::interp_quant)5003; KH_T = kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >; Illum_T = ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; Decay_T = decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; SSAH_T = st_sum_arr_hand_nms::st_sum_arr_hand]’:
src/CW_1S2S_Arr_gen.cpp:46:5:   required from ‘void in_beam_func(kh_t&, aaeh_t&) [with ig_nms::interp_quant IQ = (ig_nms::interp_quant)5003; kh_t = kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >; aaeh_t = aae_hand_nms::atomic_array_evolution_handler<ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, st_sum_arr_hand_nms::st_sum_arr_hand>]’
src/CW_1S2S_Arr_gen.cpp:36:19:   required from ‘void run_reg(kh_t&, aaeh_t&) [with ig_nms::interp_quant IQ = (ig_nms::interp_quant)5003; kh_t = kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >; aaeh_t = aae_hand_nms::atomic_array_evolution_handler<ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, st_sum_arr_hand_nms::st_sum_arr_hand>]’
src/CW_1S2S_Arr_gen.cpp:77:25:   required from here
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Template_Impl/Atomic_Array_Evolution_Handler.hpp:48:21: error: no matching function for call to ‘aae_hand_nms::atomic_array_evolution_handler<ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >, st_sum_arr_hand_nms::st_sum_arr_hand>::build_params_arr(kin_hand_nms::kinematic_handler<true, boost::numeric::odeint::symplectic_rkn_sb3a_mclachlan<bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, bvec_nms::basic_vec<>, bvec_nms::basic_vec<>, double, boost::numeric::odeint::vector_space_algebra>, 0, emq_nms::grid_EM_quants<> >&)’
In file included from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics.h:4:0,
                 from src/CW_1S2S_Arr_gen.cpp:4:
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Atomic_Array_Evolution_Handler.h:66:14: note: candidate: template<ig_nms::interp_quant IQ, class KH_T> void aae_hand_nms::atomic_array_evolution_handler<Illum_T, Decay_T, SSAH_T>::build_params_arr(KH_T&) [with ig_nms::interp_quant IQ = IQ; KH_T = KH_T; Illum_T = ill_arr_hand_nms::illumination_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; Decay_T = decay_arr_nms::decay_array_handler<(pdef_nms::illum_type)1, emq_nms::grid_EM_quants<> >; SSAH_T = st_sum_arr_hand_nms::st_sum_arr_hand]
         void build_params_arr(KH_T&);
              ^~~~~~~~~~~~~~~~
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Atomic_Array_Evolution_Handler.h:66:14: note:   template argument deduction/substitution failed:
In file included from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Atomic_Array_Evolution_Handler.h:70:0,
                 from /n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics.h:4,
                 from src/CW_1S2S_Arr_gen.cpp:4:
/n/home11/njones/Lab_Code_Q_152/Libraries/include/ATRAP_Atomic_Physics/Template_Impl/Atomic_Array_Evolution_Handler.hpp:48:21: note:   couldn't deduce template parameter ‘IQ’
     build_params_arr(kh);
     ~~~~~~~~~~~~~~~~^~~~
make: *** [CW_1S2S_Arr_gen] Error 1
